--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -94,3 +94,10 @@
 .heading-1 {
 	padding: 10px;
 }
+
+.head-section {
+	display: flex;
+	justify-content: flex-end;
+	gap: 10px;
+	margin: 20px;
+}
