--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -72,6 +72,10 @@
 	--Castoro: "Castoro Titling", sans-serif;
 }
 
+body {
+	font-family: "Poppins", sans-serif;
+}
+
 .update-button {
 	background-color: var(--LightGreen1);
 	color: white;
@@ -100,4 +104,14 @@
 	justify-content: flex-end;
 	gap: 10px;
 	margin: 20px;
+}
+
+.btn-section {
+	display: flex;
+	gap: 10px;
+	margin-top: 30px;
+}
+
+.form {
+	margin-left: 30px;
 }
